--- a/olas_prediction/component.yaml
+++ b/olas_prediction/component.yaml
@@ -47,6 +47,10 @@ inputs:
     * This is incorrect:```json"{{\n  \"p_yes\": 0.2,\n  \"p_no\": 0.8,\n  \"confidence\": 0.7\n}}"```
     * This is correct:"{{\n  \"p_yes\": 0.2,\n  \"p_no\": 0.8,\n  \"confidence\": 0.7\n}}"
 
+outputs:
+    save: false
+    location: ipfs
+
 implementation:
     package:
         entrypoint: run.py
